--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "dependencies": {
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "grommet": "2.7.4",
+    "styled-components": "4.3.2",
+    "@mdx-js/runtime": "1.1.6"
   },
   "devDependencies": {
     "typescript": "3.3.3"
